# Loucos-por-acai

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  db.sqlite3  requirements.txt
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1ca94360e803_initial_schema.py  37aa096ec2d4_add_payment_fields_to_orders.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/core/: auth.py  limiter.py  security.py
backend/app/models/: __init__.py  audit.py  business_hours.py  cart.py  loyalty.py  order.py  product.py  user.py
backend/app/routers/: __init__.py  auth.py  cart.py  catalog.py  customers.py  employees.py  orders.py  sales.py  users.py
backend/app/schemas/: __init__.py  auth.py  cart.py  catalog.py  orders.py  user.py
backend/tests/: conftest.py  test_addresses.py  test_auth.py  test_cart.py  test_catalog.py  test_customers.py  test_employees.py  test_main.py  test_models.py  test_orders.py  test_sales.py
docs/: API_SPEC.md  ARCHITECTURE.md  DATA_MODEL.md  DESIGN.md  IMPLEMENTATION_PLAN.md
frontend/: eslint.config.js  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AcaiBuilderModal.tsx  CartSidebar.tsx  Layout.tsx  ProtectedRoute.tsx
frontend/src/pages/: About.tsx  Checkout.tsx  Contact.tsx  Dashboard.tsx  Home.tsx  Loyalty.tsx  Menu.tsx  OrderHistory.tsx  OrderTracking.tsx  POS.tsx  Profile.tsx
frontend/src/store/: apiSlice.ts  authSlice.ts  index.ts  (+1 more)
loucosAcai/: settings.py  urls.py
modelo/: apps.py  forms.py  models.py  urls.py
(+58 files in other folders)
