[tool.poetry]
name = "loucos-por-acai-backend"
version = "0.1.0"
description = "Backend do sistema Loucos por Açaí reescrito em FastAPI"
authors = ["Paulo Rodrigues"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
slowapi = "^0.1.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
bcrypt = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
black = "^24.4.0"
isort = "^5.13.0"
mypy = "^1.10.0"
